white screen before splash screen

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -12,9 +12,17 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <!-- Customize your theme here. -->
         <item name="android:windowDisablePreview">true</item>
-        <!--        <item name="android:windowBackground">@null</item>-->
-
+        <!--        <item name="android:windowBackground">@color/theme_light_orange</item>-->
         <item name="android:windowIsTranslucent">true</item>
+
+        <!--        <item name="windowNoTitle">true</item>-->
+        <!--        <item name="windowActionBar">false</item>-->
+        <!--        <item name="android:windowFullscreen">true</item>-->
+        <!--        <item name="android:windowIsTranslucent">true</item>-->
+        <!--        <item name="android:windowContentOverlay">@null</item>-->
+        <!--        <item name="android:backgroundDimEnabled">false</item>-->
+        <!--        <item name="android:windowDisablePreview">true</item>-->
     </style>
 </resources>
