--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,7 +13,9 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="android:windowDisablePreview">true</item>
-        <!--        <item name="android:windowBackground">@null</item>-->
+        <!--        <item name="android:windowBackground">@color/theme_light_orange</item>-->
         <item name="android:windowIsTranslucent">true</item>
     </style>
+
+
 </resources>
