--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -12,10 +12,10 @@
 <!--            android:id="@+id/nav_chat"-->
 <!--            android:icon="@drawable/ic_chat"-->
 <!--            android:title="Chat" />-->
-<!--        <item-->
-<!--            android:id="@+id/nav_profile"-->
-<!--            android:icon="@drawable/ic_profile"-->
-<!--            android:title="Profile" />-->
+        <item
+            android:id="@+id/nav_profile"
+            android:icon="@drawable/ic_profile"
+            android:title="Profile" />
     </group>
 
     <item android:title="Extra">
